# cuda-matmul-optimizer

./: .gitignore  CLAUDE.md  CMakeLists.txt  PDR.md  README.md
include/: matmul.h
scripts/: benchmark.py  test_correctness.py
src/: bindings.cpp  main.cpp  matmul.cu
